--- a/src/main/java/graphics/fxml/AdminMenu.fxml
+++ b/src/main/java/graphics/fxml/AdminMenu.fxml
@@ -38,7 +38,7 @@
         </VBox>
         <Label alignment="CENTER" contentDisplay="CENTER" ellipsisString="" layoutX="161.0" layoutY="29.0" prefHeight="48.0" prefWidth="278.0" text="WELCOME  ADMIN!" textAlignment="CENTER">
             <font>
-                <Font name="Bookshelf Symbol 7" size="24.0" />
+                <Font name="Andalus" size="28.0" />
             </font>
             <padding>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -63,16 +63,37 @@
             <children>
                 <Label alignment="CENTER" prefHeight="27.0" prefWidth="144.0" text="Personal Information">
                     <font>
-                        <Font name="Bookshelf Symbol 7" size="14.0" />
+                        <Font name="Andalus" size="15.0" />
                     </font>
                 </Label>
-                <Label alignment="CENTER" prefHeight="18.0" prefWidth="72.0" text="username" GridPane.rowIndex="1" />
-                <Label alignment="CENTER" prefHeight="18.0" prefWidth="70.0" text="password" GridPane.rowIndex="2" />
-                <Label alignment="CENTER" prefHeight="18.0" prefWidth="41.0" text="role" GridPane.rowIndex="3" />
-                <Label alignment="CENTER" prefHeight="18.0" prefWidth="51.0" text="name" GridPane.rowIndex="4" />
-                <Label alignment="CENTER" prefHeight="18.0" prefWidth="85.0" text="family name" GridPane.rowIndex="5" />
-                <Label alignment="CENTER" prefHeight="18.0" prefWidth="57.0" text="e-mail" GridPane.rowIndex="6" />
-                <Label alignment="CENTER" prefHeight="18.0" prefWidth="66.0" text="number" GridPane.rowIndex="7" />
+                <Label alignment="CENTER" prefHeight="18.0" prefWidth="72.0" text="username" GridPane.rowIndex="1">
+               <font>
+                  <Font name="Andalus" size="14.0" />
+               </font></Label>
+                <Label alignment="CENTER" prefHeight="18.0" prefWidth="70.0" text="password" GridPane.rowIndex="2">
+               <font>
+                  <Font name="Andalus" size="14.0" />
+               </font></Label>
+                <Label alignment="CENTER" prefHeight="18.0" prefWidth="41.0" text="role" GridPane.rowIndex="3">
+               <font>
+                  <Font name="Andalus" size="14.0" />
+               </font></Label>
+                <Label alignment="CENTER" prefHeight="18.0" prefWidth="51.0" text="name" GridPane.rowIndex="4">
+               <font>
+                  <Font name="Andalus" size="14.0" />
+               </font></Label>
+                <Label alignment="CENTER" prefHeight="18.0" prefWidth="85.0" text="family name" GridPane.rowIndex="5">
+               <font>
+                  <Font name="Andalus" size="14.0" />
+               </font></Label>
+                <Label alignment="CENTER" prefHeight="18.0" prefWidth="57.0" text="e-mail" GridPane.rowIndex="6">
+               <font>
+                  <Font name="Andalus" size="14.0" />
+               </font></Label>
+                <Label alignment="CENTER" prefHeight="18.0" prefWidth="66.0" text="number" GridPane.rowIndex="7">
+               <font>
+                  <Font name="Andalus" size="14.0" />
+               </font></Label>
                 <Label fx:id="usernameLabel" prefHeight="18.0" prefWidth="171.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                 <Label fx:id="passwordLabel" prefHeight="18.0" prefWidth="196.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                 <Label fx:id="roleLabel" prefHeight="18.0" prefWidth="215.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
@@ -95,7 +116,7 @@
         <Separator layoutX="300.0" layoutY="121.0" orientation="VERTICAL" prefHeight="210.0" prefWidth="18.0" />
         <Label alignment="CENTER" layoutX="27.0" layoutY="86.0" prefHeight="27.0" prefWidth="139.0" text="Account Access" textAlignment="CENTER">
             <font>
-                <Font name="Bookshelf Symbol 7" size="18.0" />
+                <Font name="Andalus" size="20.0" />
             </font>
         </Label>
         <Separator layoutX="23.0" layoutY="104.0" prefHeight="18.0" prefWidth="146.0" />
