--- a/src/main/java/graphics/fxml/AllProductsMenu.fxml
+++ b/src/main/java/graphics/fxml/AllProductsMenu.fxml
@@ -1,15 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import java.net.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
 <AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.AllProductsMenu">
    <stylesheets>
@@ -23,17 +17,29 @@
       <Button layoutX="14.0" layoutY="214.0" mnemonicParsing="false" onAction="#performFilter" onMousePressed="#buttonSound" prefHeight="32.0" prefWidth="106.0" text="Filter" />
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="6.0" layoutY="79.0" prefHeight="22.0" prefWidth="89.0" text="Max Price">
          <font>
-            <Font name="System Bold" size="13.0" />
+            <Font name="Andalus" size="18.0" />
          </font>
       </Label>
       <TextField fx:id="priceTextField" layoutX="109.0" layoutY="71.0" prefHeight="38.0" prefWidth="106.0" />
-      <Label alignment="CENTER" layoutX="13.0" layoutY="127.0" prefHeight="32.0" prefWidth="89.0" text="Product Name" />
+      <Label alignment="CENTER" layoutX="13.0" layoutY="127.0" prefHeight="32.0" prefWidth="89.0" text="Product Name">
+         <font>
+            <Font name="Andalus" size="15.0" />
+         </font></Label>
       <TextField fx:id="nameTextField" layoutX="109.0" layoutY="124.0" prefHeight="38.0" prefWidth="106.0" />
-      <Label alignment="CENTER" layoutX="13.0" layoutY="168.0" prefHeight="32.0" prefWidth="76.0" text="Category" />
+      <Label alignment="CENTER" layoutX="13.0" layoutY="168.0" prefHeight="32.0" prefWidth="76.0" text="Category">
+         <font>
+            <Font name="Andalus" size="18.0" />
+         </font></Label>
       <ChoiceBox fx:id="categoryChoiceBox" layoutX="99.0" layoutY="168.0" onMousePressed="#buttonSound" prefHeight="32.0" prefWidth="135.0" />
-      <CheckBox fx:id="priceCheckBox" layoutX="4.0" layoutY="279.0" mnemonicParsing="false" onMousePressed="#buttonSound" text="Sort By Price" />
+      <CheckBox fx:id="priceCheckBox" layoutX="4.0" layoutY="279.0" mnemonicParsing="false" onMousePressed="#buttonSound" text="Sort By Price">
+         <font>
+            <Font name="Andalus" size="16.0" />
+         </font></CheckBox>
       <Button layoutX="138.0" layoutY="214.0" mnemonicParsing="false" onAction="#disableFilter" onMousePressed="#buttonSound" prefHeight="32.0" prefWidth="106.0" text="Disable Filter" />
-      <CheckBox fx:id="averageRateCheckBox" layoutX="127.0" layoutY="279.0" mnemonicParsing="false" onMousePressed="#buttonSound" text="Sort By Average Rate" />
+      <CheckBox fx:id="averageRateCheckBox" layoutX="127.0" layoutY="279.0" mnemonicParsing="false" onMousePressed="#buttonSound" text="Sort By Average Rate">
+         <font>
+            <Font name="Andalus" size="16.0" />
+         </font></CheckBox>
       <Button layoutX="14.0" layoutY="321.0" mnemonicParsing="false" onAction="#performSort" onMousePressed="#buttonSound" prefHeight="32.0" prefWidth="106.0" text="Sort" />
       <Button layoutX="138.0" layoutY="321.0" mnemonicParsing="false" onAction="#disableSort" onMousePressed="#buttonSound" prefHeight="32.0" prefWidth="106.0" text="Disable Sort" />
       <TableView fx:id="productTable" layoutX="304.0" prefHeight="600.0" prefWidth="598.0">
