--- a/src/main/java/graphics/fxml/CartMenu.fxml
+++ b/src/main/java/graphics/fxml/CartMenu.fxml
@@ -27,7 +27,10 @@
                         <Button layoutX="8.0" layoutY="453.0" mnemonicParsing="false" onAction="#purchase" onMousePressed="#buttonSound" prefHeight="48.0" prefWidth="159.0" text="Purchase" />
                         <Button layoutX="87.0" layoutY="123.0" mnemonicParsing="false" onAction="#decreaseProduct" onMousePressed="#buttonSound" prefHeight="35.0" prefWidth="75.0" text="-" />
                         <TextField fx:id="productTextField" layoutX="4.0" layoutY="48.0" prefHeight="42.0" prefWidth="167.0" />
-                        <Label layoutX="8.0" layoutY="14.0" prefHeight="24.0" prefWidth="125.0" text="Product Id" />
+                        <Label layoutX="8.0" layoutY="14.0" prefHeight="24.0" prefWidth="125.0" text="Product Id">
+                     <font>
+                        <Font name="Andalus" size="18.0" />
+                     </font></Label>
                   <Button layoutX="10.0" layoutY="514.0" mnemonicParsing="false" onAction="#goToMyAccount" onMousePressed="#buttonSound" prefHeight="44.0" prefWidth="156.0" text="My Account" />
                     </children>
                 </AnchorPane>
@@ -46,7 +49,10 @@
                                 <TableColumn fx:id="totalPriceColumn" prefWidth="76.0" text="Total Price" />
                             </columns>
                         </TableView>
-                        <Label layoutX="128.0" layoutY="14.0" prefHeight="28.0" prefWidth="159.0" text="Cart Summary" />
+                        <Label alignment="CENTER" layoutX="128.0" layoutY="14.0" prefHeight="28.0" prefWidth="159.0" text="Cart Summary">
+                     <font>
+                        <Font name="Andalus" size="20.0" />
+                     </font></Label>
                         <Label fx:id="totalPriceLabel" layoutY="502.0" prefHeight="71.0" prefWidth="415.0" text="  Total Price Of Cart : ">
                             <font>
                                 <Font name="System Bold Italic" size="14.0" />
