--- a/src/main/java/graphics/fxml/MainMenu.fxml
+++ b/src/main/java/graphics/fxml/MainMenu.fxml
@@ -15,7 +15,7 @@
    <children>
       <Label alignment="CENTER" layoutX="105.0" layoutY="52.0" prefHeight="100.0" prefWidth="371.0" text="WELCOME TO MAIN MENU !">
          <font>
-            <Font size="18.0" />
+            <Font name="Andalus" size="24.0" />
          </font>
       </Label>
       <Button layoutX="242.0" layoutY="152.0" mnemonicParsing="false" onAction="#goToAccount" onMousePressed="#buttonSound" prefHeight="55.0" prefWidth="115.0" text="ACCOUNT" />
