--- a/src/main/java/graphics/fxml/ProductMenu.fxml
+++ b/src/main/java/graphics/fxml/ProductMenu.fxml
@@ -1,23 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.TilePane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import java.net.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<GridPane hgap="20.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0"
-          prefWidth="700.0" vgap="10.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.ProductMenu">
+<GridPane hgap="20.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="700.0" vgap="10.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.ProductMenu">
     <stylesheets>
         <URL value="@cssSheets/BasicStyle.css" />
     </stylesheets>
@@ -40,7 +30,7 @@
     <children>
         <Label fx:id="productNameLabel" alignment="CENTER" graphicTextGap="10.0" prefHeight="82.0" prefWidth="200.0" text="Product Name" textAlignment="CENTER" textFill="#130e1b" GridPane.columnIndex="1" GridPane.rowIndex="1">
             <font>
-                <Font name="System Bold Italic" size="18.0" />
+                <Font name="Andalus" size="24.0" />
             </font>
         </Label>
         <ImageView fx:id="imageview" fitHeight="146.0" fitWidth="202.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="2">
@@ -65,7 +55,10 @@
             <children>
                 <ChoiceBox fx:id="choiceBox" onMousePressed="#buttonSound" prefHeight="27.0" prefWidth="232.0" />
                 <Button alignment="TOP_CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#choiceBoxAction" onMousePressed="#buttonSound" prefHeight="32.0" prefWidth="137.0" text="Apply Action" />
-                <Label prefHeight="30.0" prefWidth="128.0" text="Similar Products" />
+                <Label alignment="CENTER" prefHeight="30.0" prefWidth="128.0" text="Similar Products">
+               <font>
+                  <Font name="Andalus" size="18.0" />
+               </font></Label>
             </children>
             <padding>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
