--- a/src/main/java/graphics/fxml/RegisterMenu.fxml
+++ b/src/main/java/graphics/fxml/RegisterMenu.fxml
@@ -13,12 +13,15 @@
         <URL value="@cssSheets/BackGround.css" />
     </stylesheets>
    <children>
-      <Label layoutX="252.0" layoutY="49.0" text="REGISTER">
+      <Label alignment="CENTER" layoutX="235.0" layoutY="40.0" prefHeight="44.0" prefWidth="129.0" text="REGISTER">
          <font>
-            <Font size="23.0" />
+            <Font name="Andalus" size="28.0" />
          </font>
       </Label>
-      <Label layoutX="81.0" layoutY="99.0" text="PLEASE ENTER INFORMATION BELOW :" />
+      <Label layoutX="81.0" layoutY="99.0" text="PLEASE ENTER INFORMATION BELOW :">
+         <font>
+            <Font name="Andalus" size="18.0" />
+         </font></Label>
       <GridPane layoutX="165.0" layoutY="152.0">
         <columnConstraints>
           <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -35,29 +38,59 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label text="username :" />
-            <Label text="password :" GridPane.rowIndex="1" />
+            <Label text="username :">
+               <font>
+                  <Font name="Andalus" size="18.0" />
+               </font></Label>
+            <Label text="password :" GridPane.rowIndex="1">
+               <font>
+                  <Font name="Andalus" size="18.0" />
+               </font></Label>
             <TextField fx:id="username" GridPane.columnIndex="1" />
             <PasswordField fx:id="password" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TextField fx:id="name" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <TextField fx:id="familyName" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <TextField fx:id="email" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <TextField fx:id="number" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <Label text="name :" GridPane.rowIndex="2" />
-            <Label text="family name :" GridPane.rowIndex="3" />
-            <Label text="e-mail :" GridPane.rowIndex="4" />
-            <Label text="number :" GridPane.rowIndex="5" />
+            <Label text="name :" GridPane.rowIndex="2">
+               <font>
+                  <Font name="Andalus" size="18.0" />
+               </font></Label>
+            <Label text="family name :" GridPane.rowIndex="3">
+               <font>
+                  <Font name="Andalus" size="18.0" />
+               </font></Label>
+            <Label text="e-mail :" GridPane.rowIndex="4">
+               <font>
+                  <Font name="Andalus" size="18.0" />
+               </font></Label>
+            <Label text="number :" GridPane.rowIndex="5">
+               <font>
+                  <Font name="Andalus" size="18.0" />
+               </font></Label>
             <Label fx:id="usernameMessage" prefHeight="17.0" prefWidth="52.0" GridPane.columnIndex="2" />
             <Label fx:id="passwordMessage" prefHeight="17.0" prefWidth="51.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <Label fx:id="companyLabel" text="company :" GridPane.rowIndex="6" />
+            <Label fx:id="companyLabel" text="company :" GridPane.rowIndex="6">
+               <font>
+                  <Font name="Andalus" size="18.0" />
+               </font></Label>
             <TextField fx:id="company" GridPane.columnIndex="1" GridPane.rowIndex="6" />
          </children>
       </GridPane>
       <Button layoutX="279.0" layoutY="367.0" mnemonicParsing="false" onAction="#register" onMousePressed="#buttonSound" text="SIGN UP" />
       <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#back" onMousePressed="#buttonSound" text="back" />
       <Label fx:id="message" contentDisplay="CENTER" layoutX="205.0" layoutY="399.0" prefHeight="17.0" prefWidth="237.0" textAlignment="CENTER" />
-      <CheckBox fx:id="adminRole" layoutX="149.0" layoutY="127.0" mnemonicParsing="false" onMousePressed="#buttonSound" text="Admin" />
-      <CheckBox fx:id="sellerRole" layoutX="265.0" layoutY="127.0" mnemonicParsing="false" onMousePressed="#buttonSound" text="Seller" />
-      <CheckBox fx:id="customerRole" layoutX="366.0" layoutY="127.0" mnemonicParsing="false" onMousePressed="#buttonSound" text="customer" />
+      <CheckBox fx:id="adminRole" layoutX="149.0" layoutY="127.0" mnemonicParsing="false" onMousePressed="#buttonSound" text="Admin">
+         <font>
+            <Font name="Andalus" size="18.0" />
+         </font></CheckBox>
+      <CheckBox fx:id="sellerRole" layoutX="265.0" layoutY="127.0" mnemonicParsing="false" onMousePressed="#buttonSound" text="Seller">
+         <font>
+            <Font name="Andalus" size="18.0" />
+         </font></CheckBox>
+      <CheckBox fx:id="customerRole" layoutX="366.0" layoutY="127.0" mnemonicParsing="false" onMousePressed="#buttonSound" text="customer">
+         <font>
+            <Font name="Andalus" size="18.0" />
+         </font></CheckBox>
    </children>
 </AnchorPane>
