--- a/src/main/java/graphics/fxml/SellerProductMenu.fxml
+++ b/src/main/java/graphics/fxml/SellerProductMenu.fxml
@@ -29,7 +29,7 @@
       <Button layoutX="7.0" layoutY="8.0" mnemonicParsing="false" onAction="#back" onMousePressed="#buttonSound" text="back" />
       <Label alignment="CENTER" layoutX="208.0" layoutY="5.0" prefHeight="32.0" prefWidth="132.0" text="My Products">
          <font>
-            <Font size="22.0" />
+            <Font name="Andalus" size="25.0" />
          </font>
       </Label>
    </children>
