--- a/src/main/java/graphics/fxml/ThisPersonBuyLogs.fxml
+++ b/src/main/java/graphics/fxml/ThisPersonBuyLogs.fxml
@@ -28,9 +28,9 @@
                         <TableColumn fx:id="amountOfDiscountColumn" prefWidth="124.0" text="Amount of Discount" />
                     </columns>
                   </TableView>
-                  <Label alignment="CENTER" layoutX="218.0" layoutY="23.0" prefHeight="40.0" prefWidth="144.0" text="All Buy Logs">
+                  <Label alignment="CENTER" layoutX="218.0" layoutY="22.0" prefHeight="40.0" prefWidth="144.0" text="All Buy Logs">
                      <font>
-                        <Font size="24.0" />
+                        <Font name="Andalus" size="26.0" />
                      </font>
                   </Label>
                </children></AnchorPane>
@@ -39,7 +39,7 @@
                   <TextField fx:id="logCode" layoutX="247.0" layoutY="45.0" prefHeight="38.0" prefWidth="104.0" />
                   <Label alignment="CENTER" layoutX="144.0" layoutY="14.0" text="Enter buy log code to show you the complete log!" textAlignment="CENTER">
                      <font>
-                        <Font size="14.0" />
+                        <Font name="Andalus" size="16.0" />
                      </font>
                   </Label>
                   <Button layoutX="257.0" layoutY="88.0" mnemonicParsing="false" onAction="#showBuyLog" onMousePressed="#buttonSound" text="Show Log" />
