--- a/src/main/java/graphics/fxml/ThisSellerSellLogs.fxml
+++ b/src/main/java/graphics/fxml/ThisSellerSellLogs.fxml
@@ -30,7 +30,7 @@
                         </TableView>
                         <Label alignment="CENTER" layoutX="218.0" layoutY="23.0" prefHeight="40.0" prefWidth="144.0" text="All Sell Logs">
                             <font>
-                                <Font size="24.0" />
+                                <Font name="Andalus" size="26.0" />
                             </font>
                         </Label>
                     </children></AnchorPane>
@@ -39,7 +39,7 @@
                         <TextField fx:id="logCode" layoutX="247.0" layoutY="45.0" prefHeight="38.0" prefWidth="104.0" />
                         <Label alignment="CENTER" layoutX="144.0" layoutY="14.0" text="Enter sell log code to show you the complete log!" textAlignment="CENTER">
                             <font>
-                                <Font size="14.0" />
+                                <Font name="Andalus" size="16.0" />
                             </font>
                         </Label>
                         <Button layoutX="258.0" layoutY="92.0" mnemonicParsing="false" onAction="#showBuyLog" onMousePressed="#buttonSound" text="Show Log" />
